Fix broken examples on IE11 vaadin/vaadin-board-flow#127
* Add wrapper to elements in order to fix IE11 issue

Web-component: vaadin-board

--- a/integration-tests/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/integration-tests/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -32,20 +32,13 @@
   }
 
   .image-collage-item {
+    height: 100%;
+    width: 100%;
     min-height: 300px;
     overflow: hidden;
     padding: 10px;
     background: #dedede;
     border: 5px solid #FFF;
-
-    .v-caption {
-      display: none;
-    }
-
-    img {
-      min-width: 100%;
-      min-height: 100%;
-      object-fit: cover;
-    }
+    object-fit: cover;
   }
 }
